--- a/getUser.html
+++ b/getUser.html
@@ -23,10 +23,13 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="getUsers.html">Utenti Registrati</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="login.html">Verifica Credenziali</a>
+                    </li>
                 </ul>
             </div>
         </div>
-    </nav>   
+    </nav>      
     <div class="container py-4">
         <h1 class="mb-4">Trova Utente</h1>
         <form id="form" action="" method="get">
