--- a/getUsers.html
+++ b/getUsers.html
@@ -23,10 +23,13 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="getUsers.html">Utenti Registrati</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="login.html">Verifica Credenziali</a>
+                    </li>
                 </ul>
             </div>
         </div>
-    </nav>   
+    </nav>    
     <div class="container py-4">
         <h1 class="mb-4">Utenti Registrati</h1>
         <table class="table table-striped table-hover">
