--- a/register.html
+++ b/register.html
@@ -23,10 +23,13 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="getUsers.html">Utenti Registrati</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="login.html">Verifica Credenziali</a>
+                    </li>
                 </ul>
             </div>
         </div>
-    </nav>       
+    </nav>         
 
     <div class="container py-5">
         <h1 class="mb-4">Registra Utente</h1>
