--- a/update.html
+++ b/update.html
@@ -7,6 +7,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="register.html">Registra Utente</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="getUser.html">Trova Utente</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="getUsers.html">Utenti Registrati</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="login.html">Verifica Credenziali</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>   
     <div class="container py-4">
         <h1>Aggiorna Utente</h1>
         <form action="" id="update-form" method="put">
